[package]
name = "wyd"
version = "0.1.0"
authors = ["Robert Davidson <rdavidson@accusoft.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version="0.4.19",features=["serde"]}
clap = "2.33.3"
dirs = "3.0.2"
humantime = "2.1.0"
notify-rust = "4.5.0"
ron = "0.6.4"
serde = "1.0.125"
url = { version = "2.2.2", features = ["serde"] }
uuid = { version = "0.8", features = ["v4", "serde"] }